--- a/www/ui/stylesheets/task_list.css
+++ b/www/ui/stylesheets/task_list.css
@@ -1,6 +1,6 @@
 #TaskList {}
 #TaskList li input { display: block; margin-top: 14px; margin-left: 10px;  }
-#TaskList li .name { margin-left: 10px; }
+#TaskList li .item { margin-left: 10px; }
 #TaskList li button { display: block; margin-top: 7px; margin-right: 10px; }
 #TaskList li { height: 45px; }
 #TaskList li.help { padding: 10px; height: auto;  }
